feat(cli): allow direct local console access
